--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ipsa deserunt voluptatem perspiciatis ratione omnis, labore sed temporibus sapiente, maiores amet. Dignissimos soluta quas inventore omnis atque facilis quisquam itaque!</p>
 </div>
 <div class="sect2">
-    <img class="imgpizz" src="/imagenes/muzza.jfif" alt="">
-    <img class="imgpizz" src="/imagenes/romana.jfif"  alt="">
-    <img class="imgpizz" src="/imagenes/napolitana.jfif" alt="">
-    <img class="imgpizz" src="/imagenes/primavera.jfif"  alt="">
+    <img class="imgpizz" src="./imagenes/muzza.jfif" alt="">
+    <img class="imgpizz" src="./imagenes/romana.jfif"  alt="">
+    <img class="imgpizz" src="./imagenes/napolitana.jfif" alt="">
+    <img class="imgpizz" src="./imagenes/primavera.jfif"  alt="">
 </div>
 </div>
 </section>
