--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
 
     <div>
-        <img class="logo" src="/imagenes/hand-drawn-vector-pizza-logo-3123589.jpg" alt="logo-pizzeria">
+        <img class="logo" src="imagenes/hand-drawn-vector-pizza-logo-3123589.jpg" alt="logo-pizzeria">
     </div>
 
 </div>
@@ -55,14 +55,14 @@
     <div class="principal">
 <div class="sect1">
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ipsa deserunt voluptatem perspiciatis ratione omnis, labore sed temporibus sapiente, maiores amet. Dignissimos soluta quas inventore omnis atque facilis quisquam itaque!</p>
-    <img class="imgsec1" src="/imagenes/muzza.jfif" alt="">
+    <img class="imgsec1" src="imagenes/muzza.jfif" alt="">
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ipsa deserunt voluptatem perspiciatis ratione omnis, labore sed temporibus sapiente, maiores amet. Dignissimos soluta quas inventore omnis atque facilis quisquam itaque!</p>
 </div>
 <div class="sect2">
-    <img class="imgpizz" src="./imagenes/muzza.jfif" alt="">
-    <img class="imgpizz" src="./imagenes/romana.jfif"  alt="">
-    <img class="imgpizz" src="./imagenes/napolitana.jfif" alt="">
-    <img class="imgpizz" src="./imagenes/primavera.jfif"  alt="">
+    <img class="imgpizz" src="imagenes/muzza.jfif" alt="">
+    <img class="imgpizz" src="imagenes/romana.jfif"  alt="">
+    <img class="imgpizz" src="imagenes/napolitana.jfif" alt="">
+    <img class="imgpizz" src="imagenes/primavera.jfif"  alt="">
 </div>
 </div>
 </section>
