--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <img class="logo" src="imagenes/hand-drawn-vector-pizza-logo-3123589.jpg" alt="logo-pizzeria">
     </div>
     <nav>
-        <a class="link" href="">PRODUCTOS</a>
-        <a class="link" href="">PRODUCTOS</a>
-        <a class="link" href="">PRODUCTOS</a>
-        <a class="link" href="">PRODUCTOS</a>
+        <a class="link" href="/productos.html">PRODUCTOS</a>
+        <a class="link" href="">PRO</a>
+        <a class="link" href="">PR</a>
+        <a class="link" href="">PRODUS</a>
     
     </nav>
 
@@ -53,13 +53,13 @@
 <section class="section1">
     
     <div class="principal">
-<div class="sect1">
+<div class="sect1" >
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ipsa deserunt voluptatem perspiciatis ratione omnis, labore sed temporibus sapiente, maiores amet. Dignissimos soluta quas inventore omnis atque facilis quisquam itaque!</p>
     <img class="imgsec1" src="imagenes/muzza.jfif" alt="">
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ipsa deserunt voluptatem perspiciatis ratione omnis, labore sed temporibus sapiente, maiores amet. Dignissimos soluta quas inventore omnis atque facilis quisquam itaque!</p>
+    <p >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ipsa deserunt voluptatem perspiciatis ratione omnis, labore sed temporibus sapiente, maiores amet. Dignissimos soluta quas inventore omnis atque facilis quisquam itaque!</p>
 </div>
-<div class="sect2">
-    <img class="imgpizz" src="imagenes/muzza.jfif" alt="">
+<div class="sect2" >
+    <img class="imgpizz"  src="imagenes/muzza.jfif" alt="">
     <img class="imgpizz" src="imagenes/romana.jfif"  alt="">
     <img class="imgpizz" src="imagenes/napolitana.jfif" alt="">
     <img class="imgpizz" src="imagenes/primavera.jfif"  alt="">
@@ -87,9 +87,7 @@
 
 
 </footer>
-<body>
 
-
-<script src="js.js"></script>
+<script src="js.js" type="module"></script>
 </body>
 </html>
