--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <nav>
         <a class="link" href="/productos.html">PRODUCTOS</a>
-        <a class="link" href="">PRO</a>
+        <a class="link" href="/nosotros.html">NOSOTROS</a>
         <a class="link" href="">PR</a>
         <a class="link" href="">PRODUS</a>
     
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="titulo">
+<section class="titulo" >
 
     <h2 >PIZZERIA PIZZAX</h2>
 
@@ -54,9 +54,9 @@
     
     <div class="principal">
 <div class="sect1" >
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ipsa deserunt voluptatem perspiciatis ratione omnis, labore sed temporibus sapiente, maiores amet. Dignissimos soluta quas inventore omnis atque facilis quisquam itaque!</p>
+    <p>En nuestra pizzería, cada mordisco es una experiencia de sabor auténtico.</p>
     <img class="imgsec1" src="imagenes/muzza.jfif" alt="">
-    <p >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ipsa deserunt voluptatem perspiciatis ratione omnis, labore sed temporibus sapiente, maiores amet. Dignissimos soluta quas inventore omnis atque facilis quisquam itaque!</p>
+    <p > ¡Te invitamos a probar nuestra deliciosa selección de pizzas recién horneadas y disfrutar de un momento inolvidable con amigos y familiares!</p>
 </div>
 <div class="sect2" >
     <img class="imgpizz"  src="imagenes/muzza.jfif" alt="">
