--- a/productos.html
+++ b/productos.html
@@ -18,7 +18,7 @@
         </div>
         <nav>
             <a class="link" href="/index.html">HOME</a>
-            <a class="link" href="">PRO</a>
+            <a class="link" href="/nosotros.html">NOSOTROS</a>
             <a class="link" href="">PR</a>
             <a class="link" href="">PRODUS</a>
         
@@ -53,6 +53,6 @@
 
 </footer>
 
-<script src="js.js" type="module"></script>
+<script src="productos.js" type="module"></script>
 </body>
 </html>
