--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <nav>
         <a class="link" href="/productos.html">PRODUCTOS</a>
         <a class="link" href="/nosotros.html">NOSOTROS</a>
-        <a class="link" href="">PR</a>
-        <a class="link" href="">PRODUS</a>
+        <a class="link" href="/contacto.html">CONTACTO</a>
     
     </nav>
 
