--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,7 @@
     />
     <title>Pizzeria Pizzax</title>
   </head>
-  <body id="body">
+  <body>
     <header>
       <div class="header">
         <div>
@@ -26,8 +26,8 @@
         </div>
         <nav>
           <a class="link" href="/index.html">HOME</a>
+          <a class="link" href="/productos.html">PRUDUCTOS</a>
           <a class="link" href="/nosotros.html">NOSOTROS</a>
-          <a class="link" href="/contacto.html">CONTACTO</a>
         </nav>
 
         <div>
@@ -40,7 +40,22 @@
       </div>
     </header>
 
-    <section id="productos"></section>
+    <h1>Formulario básico</h1>
+    <form id="myForm" action="" method="post">
+      <label for="name">Nombre:</label>
+      <input type="text" id="name" name="name" required />
+
+      <label for="email">Correo electrónico:</label>
+      <input type="email" id="email" name="email" required />
+
+      <label for="phone">Teléfono:</label>
+      <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required />
+
+      <label for="message">Mensaje:</label>
+      <textarea id="message" name="message"></textarea>
+
+      <input type="submit" value="Enviar" />
+    </form>
     <footer class="foot">
       <nav class="pie">
         <a
@@ -75,6 +90,6 @@
       <p class="derechos">© 2023 PIZZAX. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="productos.js" type="module"></script>
+    <script src="contacto.js"></script>
   </body>
 </html>
