--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="contacto.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -40,7 +41,9 @@
       </div>
     </header>
 
-    <h1>Formulario básico</h1>
+    
+    <h1>Deja tus datos y tu consulta</h1>
+
     <form id="myForm" action="" method="post">
       <label for="name">Nombre:</label>
       <input type="text" id="name" name="name" required />
@@ -49,7 +52,7 @@
       <input type="email" id="email" name="email" required />
 
       <label for="phone">Teléfono:</label>
-      <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required />
+      <input type="tel" id="phone" name="phone" required />
 
       <label for="message">Mensaje:</label>
       <textarea id="message" name="message"></textarea>
