--- a/nosotros.html
+++ b/nosotros.html
@@ -41,19 +41,19 @@
             <img src="/imagenes/margarita.jfif" alt="taza estilo oriental con ave">
             </div>
             <div>
-            <p class="historia1">fdfsdfsdfsdfsdfsd</p>
+            <p class="historia1">¡Bienvenidos a nuestra pizzería tradicional! Sumérgete en una experiencia culinaria llena de sabor y tradición. En nuestro acogedor establecimiento, encontrarás el ambiente perfecto para disfrutar de auténticas pizzas italianas preparadas con pasión y cuidado.</p>
             <img src="/imagenes/primavera.jfif" alt="taza antigua dorada">
             <img src="/imagenes/primavera.jfif" alt="taza antigua dorada">
             <img src="/imagenes/margarita.jfif" alt="taza estilo oriental con ave">
             </div>
             <div>
-            <p class="historia2">fsdfdsfsdfsdvxc</p>
+            <p class="historia2">Nuestro compromiso es ofrecerte una selección de ingredientes frescos y de la más alta calidad. Desde la masa crujiente y bien fermentada hasta la salsa de tomate casera, cada detalle se cuida meticulosamente para brindarte una experiencia gastronómica excepcional.</p>
             <img src="/imagenes/romana.jfif" alt="taza con estrellas">
             <img src="/imagenes/prosciutto.jfif" alt="jarro antiguo">
             <img src="/imagenes/margarita.jfif" alt="taza estilo oriental con ave">
         </div>
         <div>
-            <p class="historia4">vsdbfbzfbzfdbz</p>
+            <p class="historia4">Ven y únete a nosotros en nuestra pizzería tradicional, donde la calidad, la tradición y el sabor se fusionan en cada bocado. Nuestro amable equipo te recibirá con una sonrisa y te asegurará una experiencia memorable llena de auténtico sabor italiano. ¡Te esperamos con los brazos abiertos en nuestra pizzería tradicional!</p>
             <img src="/imagenes/prosciutto.jfif" alt="jarro antiguo">
             <img src="/imagenes/prosciutto.jfif" alt="jarro antiguo">
             <img src="/imagenes/margarita.jfif" alt="taza estilo oriental con ave">
