--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -42,6 +42,11 @@
       </div>
     </header>
 
+    <div class="chisContainer">
+      <h2 class="titChis">CHISTE CHUCK DEL DIA</h2>
+      <p id="chuck-joke" class="chiste">Aquí va el chiste de Chuck Norris</p>
+    </div>
+
     
     <h1>Deja tus datos y tu consulta</h1>
 
