--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/estilos.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto"
+    />
     <link rel="stylesheet" href="/css/contacto.css" />
     <link
       rel="stylesheet"
@@ -47,7 +50,6 @@
       <p id="chuck-joke" class="chiste">Aquí va el chiste de Chuck Norris</p>
     </div>
 
-    
     <h1>Deja tus datos y tu consulta</h1>
 
     <form id="myForm" action="" method="post">
