--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           />
         </div>
         <nav>
-          <a class="link" href="/pages/productos.html">PRODUCTOS</a>
-          <a class="link" href="/pages/nosotros.html">NOSOTROS</a>
-          <a class="link" href="/pages/contacto.html">CONTACTO</a>
+          <a class="link" href="pages/productos.html">PRODUCTOS</a>
+          <a class="link" href="pages/nosotros.html">NOSOTROS</a>
+          <a class="link" href="pages/contacto.html">CONTACTO</a>
         </nav>
         <div>
           <img
