--- a/index.html
+++ b/index.html
@@ -112,6 +112,6 @@
       <p class="derechos">© 2023 PIZZAX. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="/js/index.js" type="module"></script>
+    <script src="js/index.js" type="module"></script>
   </body>
 </html>
