--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/estilos.css" />
+    <link rel="stylesheet" href="css/estilos.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto"
     />
-    <link rel="stylesheet" href="/css/contacto.css" />
+    <link rel="stylesheet" href="css/contacto.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -25,20 +25,20 @@
         <div>
           <img
             class="logo"
-            src="/imagenes/hand-drawn-vector-pizza-logo-3123589.jpg"
+            src="imagenes/hand-drawn-vector-pizza-logo-3123589.jpg"
             alt="logo-pizzeria"
           />
         </div>
         <nav>
-          <a class="link" href="/index.html">HOME</a>
-          <a class="link" href="/pages/productos.html">PRUDUCTOS</a>
-          <a class="link" href="/pages/nosotros.html">NOSOTROS</a>
+          <a class="link" href="index.html">HOME</a>
+          <a class="link" href="pages/productos.html">PRUDUCTOS</a>
+          <a class="link" href="pages/nosotros.html">NOSOTROS</a>
         </nav>
 
         <div>
           <img
             class="logo"
-            src="/imagenes/hand-drawn-vector-pizza-logo-3123589.jpg"
+            src="imagenes/hand-drawn-vector-pizza-logo-3123589.jpg"
             alt="logo-pizzeria"
           />
         </div>
@@ -101,6 +101,6 @@
       <p class="derechos">© 2023 PIZZAX. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="/js/contacto.js"></script>
+    <script src="js/contacto.js"></script>
   </body>
 </html>
