--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,7 +30,7 @@
           />
         </div>
         <nav>
-          <a class="link" href="../index.html">HOME</a>
+          <a class="link" href="./index.html">HOME</a>
           <a class="link" href="productos.html">PRUDUCTOS</a>
           <a class="link" href="nosotros.html">NOSOTROS</a>
         </nav>
