--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -87,8 +87,8 @@
           experiencia memorable llena de auténtico sabor italiano. ¡Te esperamos
           con los brazos abiertos en nuestra pizzería tradicional!
         </p>
-        <img src="/imagenes/prosciutto.jfif" alt="jarro antiguo" />
-        <img src="/imagenes/prosciutto.jfif" alt="jarro antiguo" />
+        <img src="../imagenes/prosciutto.jfif" alt="jarro antiguo" />
+        <img src="../imagenes/prosciutto.jfif" alt="jarro antiguo" />
       </div>
     </section>
     <div class="iframe-container">
@@ -134,6 +134,6 @@
       <p class="derechos">© 2023 PIZZAX. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="/js/nosotros.js" type="module"></script>
+    <script src="../js/nosotros.js" type="module"></script>
   </body>
 </html>
