--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -15,8 +15,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/css/estilos.css" />
-    <link rel="stylesheet" href="/css/nosotros.css" />
+    <link rel="stylesheet" href="../css/estilos.css" />
+    <link rel="stylesheet" href="../css/nosotros.css" />
     <title>Document</title>
   </head>
   <body id="body">
@@ -25,20 +25,20 @@
         <div>
           <img
             class="logo"
-            src="/imagenes/hand-drawn-vector-pizza-logo-3123589.jpg"
+            src="../imagenes/hand-drawn-vector-pizza-logo-3123589.jpg"
             alt="logo-pizzeria"
           />
         </div>
         <nav>
-          <a class="link" href="/index.html">HOME</a>
-          <a class="link" href="/pages/productos.html">PRODUCTOS</a>
-          <a class="link" href="/pages/contacto.html">CONTACTO</a>
+          <a class="link" href="../index.html">HOME</a>
+          <a class="link" href="productos.html">PRODUCTOS</a>
+          <a class="link" href="contacto.html">CONTACTO</a>
         </nav>
 
         <div class="log2">
           <img
             class="logo"
-            src="/imagenes/hand-drawn-vector-pizza-logo-3123589.jpg"
+            src="../imagenes/hand-drawn-vector-pizza-logo-3123589.jpg"
             alt="logo-pizzeria"
           />
         </div>
@@ -51,11 +51,11 @@
       </div>
       <div>
         <img
-          src="/imagenes/margarita.jfif"
+          src="../imagenes/margarita.jfif"
           alt="taza estilo oriental con ave"
         />
         <img
-          src="/imagenes/margarita.jfif"
+          src="../imagenes/margarita.jfif"
           alt="taza estilo oriental con ave"
         />
       </div>
@@ -66,8 +66,8 @@
           establecimiento, encontrarás el ambiente perfecto para disfrutar de
           auténticas pizzas italianas preparadas con pasión y cuidado.
         </p>
-        <img src="/imagenes/primavera.jfif" alt="taza antigua dorada" />
-        <img src="/imagenes/primavera.jfif" alt="taza antigua dorada" />
+        <img src="../imagenes/primavera.jfif" alt="taza antigua dorada" />
+        <img src="../imagenes/primavera.jfif" alt="taza antigua dorada" />
       </div>
       <div>
         <p class="historia2">
@@ -76,8 +76,8 @@
           hasta la salsa de tomate casera, cada detalle se cuida meticulosamente
           para brindarte una experiencia gastronómica excepcional.
         </p>
-        <img src="/imagenes/romana.jfif" alt="taza con estrellas" />
-        <img src="/imagenes/prosciutto.jfif" alt="jarro antiguo" />
+        <img src="../imagenes/romana.jfif" alt="taza con estrellas" />
+        <img src="../imagenes/prosciutto.jfif" alt="jarro antiguo" />
       </div>
       <div>
         <p class="historia4">
