--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/estilos.css" />
-    <link rel="stylesheet" href="/css/productos.css" />
+    <link rel="stylesheet" href="../css/estilos.css" />
+    <link rel="stylesheet" href="../css/productos.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto"
@@ -25,20 +25,20 @@
         <div>
           <img
             class="logo"
-            src="/imagenes/hand-drawn-vector-pizza-logo-3123589.jpg"
+            src="../imagenes/hand-drawn-vector-pizza-logo-3123589.jpg"
             alt="logo-pizzeria"
           />
         </div>
         <nav>
-          <a class="link" href="/index.html">HOME</a>
-          <a class="link" href="/pages/nosotros.html">NOSOTROS</a>
-          <a class="link" href="/pages/contacto.html">CONTACTO</a>
+          <a class="link" href="../index.html">HOME</a>
+          <a class="link" href="nosotros.html">NOSOTROS</a>
+          <a class="link" href="contacto.html">CONTACTO</a>
         </nav>
 
         <div>
           <img
             class="logo"
-            src="/imagenes/hand-drawn-vector-pizza-logo-3123589.jpg"
+            src="../imagenes/hand-drawn-vector-pizza-logo-3123589.jpg"
             alt="logo-pizzeria"
           />
         </div>
@@ -80,6 +80,6 @@
       <p class="derechos">© 2023 PIZZAX. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="/js/productos.js" type="module"></script>
+    <script src="../js/productos.js" type="module"></script>
   </body>
 </html>
